--- a/docs/custom.css
+++ b/docs/custom.css
@@ -4,92 +4,92 @@
 
 /* Webfont: CharisSIL-B */
 @font-face {
-    font-family: 'Charis SIL';
-    src: url('fonts/CharisSIL-B.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: 700;
-    text-rendering: optimizeLegibility;
+  font-family: 'Charis SIL';
+  src: url('fonts/CharisSIL-B.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: CharisSIL-BI */
 @font-face {
-    font-family: 'Charis SIL';
-    src: url('fonts/CharisSIL-BI.ttf') format('truetype'); /* Modern Browsers */
-    font-style: italic;
-    font-weight: 700;
-    text-rendering: optimizeLegibility;
+  font-family: 'Charis SIL';
+  src: url('fonts/CharisSIL-BI.ttf') format('truetype'); /* Modern Browsers */
+  font-style: italic;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: CharisSIL-I */
 @font-face {
-    font-family: 'Charis SIL';
-    src: url('fonts/CharisSIL-I.ttf') format('truetype'); /* Modern Browsers */
-    font-style: italic;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: 'Charis SIL';
+  src: url('fonts/CharisSIL-I.ttf') format('truetype'); /* Modern Browsers */
+  font-style: italic;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: CharisSIL-R */
 @font-face {
-    font-family: 'Charis SIL';
-    src: url('fonts/CharisSIL-R.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: 'Charis SIL';
+  src: url('fonts/CharisSIL-R.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraMono-Bold */
 @font-face {
-    font-family: 'Fira Mono';
-    src: url('fonts/FiraMono-Bold.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: 700;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Mono';
+  src: url('fonts/FiraMono-Bold.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraMono-Regular */
 @font-face {
-    font-family: 'Fira Mono';
-    src: url('fonts/FiraMono-Regular.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Mono';
+  src: url('fonts/FiraMono-Regular.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraSans-Bold */
 @font-face {
-    font-family: 'Fira Sans';
-    src: url('fonts/FiraSans-Bold.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: 700;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Sans';
+  src: url('fonts/FiraSans-Bold.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraSans-BoldItalic */
 @font-face {
-    font-family: 'Fira Sans';
-    src: url('fonts/FiraSans-BoldItalic.ttf') format('truetype'); /* Modern Browsers */
-    font-style: italic;
-    font-weight: 700;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Sans';
+  src: url('fonts/FiraSans-BoldItalic.ttf') format('truetype'); /* Modern Browsers */
+  font-style: italic;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraSans-Italic */
 @font-face {
-    font-family: 'Fira Sans';
-    src: url('fonts/FiraSans-Italic.ttf') format('truetype'); /* Modern Browsers */
-    font-style: italic;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Sans';
+  src: url('fonts/FiraSans-Italic.ttf') format('truetype'); /* Modern Browsers */
+  font-style: italic;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 /* Webfont: FiraSans-Regular */
 @font-face {
-    font-family: 'Fira Sans';
-    src: url('fonts/FiraSans-Regular.ttf') format('truetype'); /* Modern Browsers */
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: 'Fira Sans';
+  src: url('fonts/FiraSans-Regular.ttf') format('truetype'); /* Modern Browsers */
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 /* STYLE */
@@ -97,23 +97,28 @@
 * {
 	font-family: 'Charis SIL';
 	color: #000000;
-    text-align: justify;
-    text-justify: inter-word;
-    }
+  text-align: justify;
+  text-justify: inter-word;
+}
 
 .navbar-brand{
 	font-family: 'Fira Sans';
 	color: #c80000;
 	font-size: 2rem;
 	font-weight: 700;
-	}
+}
+
+li, ul {
+	margin-top: 7px;
+	margin-bottom: 7px;
+}
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Fira Sans';
 	padding-top: 1rem;
 	padding-bottom: 0.75rem;
-    }
+}
 
 code {
 	font-family: 'Fira Mono';
-    }
+}
