--- a/static/custom.css
+++ b/static/custom.css
@@ -115,8 +115,12 @@ li, ul {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Fira Sans';
-	padding-top: 1rem;
-	padding-bottom: 0.75rem;
+	padding-top: 0.75rem;
+	padding-bottom: 0.5rem;
+}
+
+h4 {
+  font-style: italic;
 }
 
 code {
