--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,9 @@
 <head>
+	<meta name="google-site-verification" content="qNJjCOM0kalXE3GTumrhM1nL9TsBurW-8rrKsc01tlY" />
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	
     <title>{{ .Title }}</title>
     <meta name="description" content="{{ .Site.Params.description }}">
     <meta name="author" content='{{ .Site.Params.author }}'>
