added LHAR and various other updates

--- a/themes/hugo-researcher/assets/sass/researcher.scss
+++ b/themes/hugo-researcher/assets/sass/researcher.scss
@@ -57,6 +57,8 @@ $y-medium: 1.0rem;
 }
 .nav-link {
     @extend %link-default;
+    padding-right: 0.25rem !important;
+    padding-left: 0.25rem !important;
 }
 #content {
     a {
