--- a/themes/hugo-researcher/layouts/partials/header.html
+++ b/themes/hugo-researcher/layouts/partials/header.html
@@ -14,7 +14,7 @@
                         {{ $nav_item.Pre }}{{ $nav_item.Name }}{{ $nav_item.Post }}
                     </a>
                     {{ if ne (add $i 1) $navbar_len }}
-                        <span class="nav-item navbar-text mx-1">/</span>
+                        <span class="nav-item navbar-text mx-1">•</span>
                     {{ end }}
                 {{ end }}
             {{ end }}
